<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/stroke_bottom">
                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/profile_picture_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:text="FName LName "/>
                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="email@school.ca"/>
                    <TextView
                        android:id="@+id/phoneNumberTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="123-123-1234"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/edit_profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_edit_24" />
            </LinearLayout>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>