<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProfileSignUpTitle"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/signupSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProfileSignUpSubtitle"
            android:textAlignment="center"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/light_grey">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="250dp"
                    app:cardBackgroundColor="@color/light_grey"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/profilePictureIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center|center_vertical"
                        android:src="@drawable/profile_edit"
                        android:background="@color/light_grey"/>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:hint="Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupName"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:hint="Email Address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupEmail"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:hint="Phone Number (optional)"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupPhone"
                android:maxLength="20"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/signupNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notifications"
            android:background="@drawable/frame"
            android:paddingStart="15dp"
            android:paddingVertical="17.5dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear"/>
        <Button
            android:enabled="false"
            android:id="@+id/signupSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"/>
    </LinearLayout>
</LinearLayout>
